# bookmark-manager-rs

./: LICENSE  README.md
server/: .env.example  Cargo.toml  diesel.toml
server/migrations/2024-08-16-205404_create_bookmarks/: down.sql  up.sql
server/migrations/2024-08-30-095613_create_tags/: up.sql
server/src/: main.rs  schema.rs
server/src/api/: bookmarks.rs  mod.rs  tags.rs
server/src/db/: mod.rs  models.rs  schema.rs  types.rs
