[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenvy = "0.15.7"
log = "0.4.22"
libsqlite3-sys = { version = "0.29", features = ["bundled"] }
diesel = { version = "2.2.0", features = [
    "sqlite",
    "r2d2",
    "uuid",
    "serde_json",
    "chrono",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = {version = "1.10.0", features = ["v4", "serde"]}
